--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@ body{
 }
 
 .login-content{
+	position: absolute;
+	margin-top: -100px;
+	margin-left: -200px;
+	left: 50%;
+	top: 50%;
+	width: 400px;
+	height: 220px;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
